--- a/css/app/_ui.sass
+++ b/css/app/_ui.sass
@@ -1,7 +1,9 @@
 body
 	margin-top: 30px
+
 header.main, footer.main
 	position: fixed
+	z-index: 1000
 	left: 0
 	width: 100%
 	background-color: #f6cfad
